# inch

./: BwdFwd.lhs  Context.lhs  Delay.hs  DelayExtras.hs  Erase.lhs  Error.lhs  Example.hs  ExampleExtras.hs  Induction.hs  Kind.lhs  KindCheck.lhs  Kit.lhs  LICENSE  Layout.hs  LayoutExtras.hs  Main.lhs  Makefile  MergeSort.hs  NonlinearCost.hs  Num.lhs  Orphans.lhs  Parser.lhs  Prelude.nhs  PrettyContext.lhs  PrettyPrinter.lhs  Process.hs  ProgramCheck.lhs  QueueExtras.hs  README.md  RedBlackCost.hs  RedBlackOrdCost.hs  RedBlackOrdCostExtras.hs  RedBlackXi.hs  Solver.lhs  Syntax.lhs  Test.lhs  TyNum.lhs  Type.lhs  TypeCheck.lhs  Unify.lhs  (+3 more)
Inch/: BwdFwd.lhs  Check.lhs  Erase.lhs  Error.lhs  Kind.lhs  KindCheck.lhs  Kit.lhs  Num.lhs  PrettyContext.lhs  PrettyPrinter.lhs  ProgramCheck.lhs  Solver.lhs  Syntax.lhs  Type.lhs  Unify.lhs
data/: Prelude.inch
dev/: Paths_inch.lhs
examples/: Cost.hs  Data.Ratio.inch  Delay.hs  Example.hs  ExampleExtras.hs  InchPrelude.hs  Induction.hs  Layout.hs  LayoutExtras.hs  MergeSort.hs  MergeSortExtras.hs  NonlinearCost.hs  Prelude.inch  Process.hs  Queue.hs  RedBlack.hs  RedBlackCost.hs  RedBlackCostExtras.hs  RedBlackExtras.hs  RedBlackOrdCost.hs  RedBlackOrdCostExtras.hs  State.hs  Subst.hs  Units.hs  UnitsHacks.inch  UnitsHacks.lhs  Vectors.hs  Wires.hs
examples/old/: RedBlack.hs  RedBlackCost.hs  RedBlackOrdCost.hs
src/Language/Inch/: BwdFwd.lhs  Check.lhs  Context.lhs  Erase.lhs  Error.lhs  File.lhs  Kind.lhs  KindCheck.lhs  Kit.lhs  Main.lhs  ModuleSyntax.lhs  Parser.lhs  PrettyPrinter.lhs  ProgramCheck.lhs  Solver.lhs  Syntax.lhs  TyNum.lhs  Type.lhs  TypeCheck.lhs  Unify.lhs
tests/: Main.lhs
