Name:                inch
Version:             0.1
Synopsis:            A type-checker for integer constraints in Haskell
Description:         
    Inch is a type-checker for (a subset of) Haskell extended with
    integer constraints, allowing you to use numbers at the type level.
    After successfully type-checking a source file, it outputs an
    operationally equivalent version with the type-level integers erased,
    so it can be used as a preprocessor in order to compile programs.

Homepage:            http://personal.cis.strath.ac.uk/~adam/inch/
License:             BSD3
License-file:        LICENSE
Author:              Adam Gundry <adam.gundry@cis.strath.ac.uk>
Maintainer:          Adam Gundry <adam.gundry@cis.strath.ac.uk>
Copyright:           Copyright (c) 2011, Adam Gundry
Category:            Language
Build-type:          Simple
Extra-source-files:  examples/*.hs
Cabal-version:       >=1.9.2

Executable inch
  ghc-options:       -Wall -fno-warn-missing-signatures
                         -fno-warn-unused-matches -fno-warn-name-shadowing
  hs-source-dirs:    src
  Main-is:           Language/Inch/Main.lhs
  Build-depends:     base == 4.3.*,
                         IndentParser == 0.2.*,
                         parsec == 3.1.*,
                         presburger == 0.3.*,
                         pretty == 1.0.*,
                         mtl == 2.0.*,
                         containers == 0.4.*
  Other-modules:     Language.Inch.BwdFwd,
                         Language.Inch.Check,
                         Language.Inch.Context
                         Language.Inch.Erase
                         Language.Inch.Error
                         Language.Inch.KindCheck
                         Language.Inch.Kind
                         Language.Inch.Kit
                         Language.Inch.Parser
                         Language.Inch.PrettyPrinter
                         Language.Inch.ProgramCheck
                         Language.Inch.Solver
                         Language.Inch.Syntax
                         Language.Inch.TyNum
                         Language.Inch.TypeCheck
                         Language.Inch.Type
                         Language.Inch.Unify         
  
Test-Suite test-inch
    type:            exitcode-stdio-1.0
    hs-source-dirs:  src tests
    main-is:         Main.lhs
    build-depends:   base == 4.3.*,
                         IndentParser == 0.2.*,
                         parsec == 3.1.*,
                         presburger == 0.3.*,
                         pretty == 1.0.*,
                         mtl == 2.0.*,
                         containers == 0.4.*,
                         directory == 1.1.*

source-repository head
  type:     darcs
  location: http://personal.cis.strath.ac.uk/~adam/inch/head/