Name:                inch
Version:             0.1.0
Synopsis:            A type-checker for Haskell with integer constraints
Description:         
    Inch is a type-checker for a subset of Haskell (plus some GHC
    extensions) with the addition of integer constraints. After
    successfully type-checking a source file, it outputs an
    operationally equivalent version with the type-level integers
    erased, so it can be used as a preprocessor in order to compile
    programs.

Homepage:            https://github.com/adamgundry/inch/
bug-reports:         https://github.com/adamgundry/inch/issues
License:             BSD3
License-file:        LICENSE
Author:              Adam Gundry <adam.gundry@strath.ac.uk>
Maintainer:          Adam Gundry <adam.gundry@strath.ac.uk>
Copyright:           Copyright (c) 2011 Adam Gundry
Category:            Language
Build-type:          Simple
Extra-source-files:  README.md
                     examples/Cost.hs
                     examples/MergeSort.hs
                     examples/NonlinearCost.hs
                     examples/Queue.hs
                     examples/RedBlack.hs
                     examples/RedBlackCost.hs
                     examples/Units.hs
                     examples/Vectors.hs
                     examples/Wires.hs
data-dir:            data
data-files:          *.inch

Cabal-version:       >=1.8

Executable inch
  ghc-options:       -Wall -rtsopts
  hs-source-dirs:    src
  Main-is:           Language/Inch/Main.lhs
  Build-depends:     base == 4.*,
                         IndentParser == 0.2.*,
                         parsec == 3.1.*,
                         presburger == 0.4.*,
                         pretty == 1.*,
                         mtl == 2.0.*,
                         containers == 0.4.*,
                         filepath == 1.2.*
  Other-modules:     Language.Inch.BwdFwd,
                         Language.Inch.Check,
                         Language.Inch.Context
                         Language.Inch.Erase
                         Language.Inch.Error
                         Language.Inch.File
                         Language.Inch.KindCheck
                         Language.Inch.Kind
                         Language.Inch.Kit
                         Language.Inch.ModuleSyntax
                         Language.Inch.Parser
                         Language.Inch.PrettyPrinter
                         Language.Inch.ProgramCheck
                         Language.Inch.Solver
                         Language.Inch.Syntax
                         Language.Inch.TyNum
                         Language.Inch.TypeCheck
                         Language.Inch.Type
                         Language.Inch.Unify         
  
Test-Suite test-inch
    type:            exitcode-stdio-1.0
    hs-source-dirs:  src tests
    main-is:         Main.lhs
    build-depends:   base == 4.*,
                         IndentParser == 0.2.*,
                         parsec == 3.1.*,
                         presburger == 0.4.*,
                         pretty == 1.*,
                         mtl == 2.0.*,
                         containers == 0.4.*,
                         filepath == 1.2.*,
                         directory == 1.1.*

source-repository head
  type:     git
  location: git://github.com/adamgundry/inch.git
